@@ -1,5 +1,11 @@
 2008-02-16  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/support.h:
+	Less transparency, more opacity on rgba mode :)
+	Tell me if you like it more
+
+2008-02-16  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/cairo-support.c: (murrine_draw_innerborder):
 	* src/murrine_style.c: (murrine_style_draw_flat_box):
 	Code polished
